istio-teaching/virtualservice/tcp/busybox.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox
  labels:
    app: busybox
    service: busybox
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: busybox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: busybox
      containers:
      - name: busybox
        image: busybox
        command: ["/bin/sleep", "3650d"]
        imagePullPolicy: IfNotPresent
---
