istio-teaching/virtualservice/tcp/vs-sourceSubnet.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tcp-echo
spec:
  hosts:
  - "tcp-echo"
  tcp:
  - match:
    - sourceSubnet: 172.20.0.0/16
    route:
    - destination:
        host: tcp-echo
        port:
          number: 9000
        subset: v2
